# aistockrecommender

./: .gitignore  README.md
backend/: .env.example  .gitignore  docker-compose.aws.yml
backend/finhub-mcp/: .env.example  pyproject.toml  server.py
backend/host_agent/: Dockerfile  __main__.py  config.py  database.py  pyproject.toml  stock_data.json
backend/host_agent/host/: agent.py  document_analyzer.py  pdf_analyzer.py
backend/stockanalyser_agent/: agent.py  config.py
backend/stockreport_analyser_agent/: agent.py
backend/terraform/: main.tf
frontend/: .firebaserc  .gitignore  AUTHENTICATION_SETUP.md  BACKEND_AUTH_EXAMPLE.md  DEMO.md  PROFILE_COMPLETION_TEST.md  README.md  README.old.md  deploy-production.sh.example  env.example  firebase.json  package-lock.json  package.json
frontend/src/: App.tsx  firebase.ts
frontend/src/components/: AdminPanel.tsx  Auth.tsx  AuthorizationErrorModal.tsx  Chat.tsx  EmailConfirmationModal.tsx  MainPage.tsx  MessageLimitBanner.tsx  PortfolioDashboard.tsx  PortfolioPerformance.tsx  ProfileSetup.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
mcp/: .gitignore  README.md  pyproject.toml  server.py  test.py  utils.py
