[project]
name = "stock-market-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "datetime",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.55",
    "tabulate>=0.9.0",
    "pandas_ta>=0.3.14b0",
    "numpy>=2.2.6"
]
